簡易HP表示を含むHUDを作成

--- a/project/Game.vcxproj
+++ b/project/Game.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="EnemyShip.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="InputComponent.cpp" />
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -41,6 +42,7 @@
     <ClInclude Include="EnemyShip.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="HUD.h" />
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="Laser.h" />
     <ClInclude Include="Math.h" />
