--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClCompile Include="HUD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TitleMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -139,6 +142,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="HUD.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleMenu.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
