--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClCompile Include="TitleMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BGSpriteComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -145,6 +148,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="TitleMenu.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BGSpriteComponent.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
