MetaAI追加。隕石生成ができることを確認。だけど動きは制御できていない

--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -82,6 +82,9 @@
     <ClCompile Include="BGSpriteComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MetaAI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -151,6 +154,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="BGSpriteComponent.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MetaAI.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
