--- a/project/Game.vcxproj
+++ b/project/Game.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
+    <ClCompile Include="MetaAI.cpp" />
     <ClCompile Include="MoveComponent.cpp" />
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="Random.cpp" />
@@ -49,6 +50,7 @@
     <ClInclude Include="InputComponent.h" />
     <ClInclude Include="Laser.h" />
     <ClInclude Include="Math.h" />
+    <ClInclude Include="MetaAI.h" />
     <ClInclude Include="MoveComponent.h" />
     <ClInclude Include="PauseMenu.h" />
     <ClInclude Include="Random.h" />
