--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="MetaAI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameOverMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -157,6 +160,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="MetaAI.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOverMenu.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
