--- a/project/Game.vcxproj
+++ b/project/Game.vcxproj
@@ -15,6 +15,8 @@
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="BGSpriteComponent.cpp" />
     <ClCompile Include="CircleComponent.cpp" />
+    <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="CollisionBroker.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="EnemyShip.cpp" />
     <ClCompile Include="Font.cpp" />
@@ -43,6 +45,8 @@
     <ClInclude Include="Asteroid.h" />
     <ClInclude Include="BGSpriteComponent.h" />
     <ClInclude Include="CircleComponent.h" />
+    <ClInclude Include="Collision.h" />
+    <ClInclude Include="CollisionBroker.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="EnemyShip.h" />
     <ClInclude Include="Font.h" />
