--- a/project/Game.vcxproj
+++ b/project/Game.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="GameOverMenu.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="Laser.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Math.cpp" />
@@ -54,6 +55,7 @@
     <ClInclude Include="GameOverMenu.h" />
     <ClInclude Include="HUD.h" />
     <ClInclude Include="InputComponent.h" />
+    <ClInclude Include="InputSystem.h" />
     <ClInclude Include="Laser.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="MetaAI.h" />
