--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -94,6 +94,9 @@
     <ClCompile Include="Collision.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputSystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h">
@@ -175,6 +178,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="CollisionBroker.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputSystem.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
