--- a/project/Game.vcxproj.filters
+++ b/project/Game.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClCompile Include="MetaAISequence.cpp">
       <Filter>Source Files\AI</Filter>
     </ClCompile>
+    <ClCompile Include="IncreaseEnemySequence.cpp">
+      <Filter>Source Files\AI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -220,6 +223,9 @@
       <Filter>Source Files\Input</Filter>
     </ClInclude>
     <ClInclude Include="MetaAISequence.h">
+      <Filter>Source Files\AI</Filter>
+    </ClInclude>
+    <ClInclude Include="IncreaseEnemySequence.h">
       <Filter>Source Files\AI</Filter>
     </ClInclude>
   </ItemGroup>
